--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="nickname">Nickname</string>
     <string name="comments">Comments</string>
     <string name="send_contact_dialog">Sending contact</string>
-    
     <string name="action_contacts">Contacts</string>
     <string name="action_group">Chat Group</string>
     <string name="button_send">Send</string>
@@ -28,5 +27,18 @@
     <string name="title_chat_detail">Chat Detail</string>
     <string name="title_interaction_list">Interaction List</string>
     <string name="title_interaction">Interaction</string>
+    <string name="title_activity_profile">ProfileActivity</string>
     
+    
+    <!-- Profile View -->
+    <string name="profile_view_content_description">Your Picture</string>
+	<string name="profile_view_first_name">First Name</string>
+	<string name="profile_view_last_name">Last Name</string>
+    <string name="profile_view_nickname">Nickname</string>
+    <string name="profile_view_country">Country</string>
+    <string name="profile_view_city">City</string>
+    <string name="profile_view_optional">OPTIONAL</string>
+    <string name="profile_view_privacy_title">PRIVACY</string>
+    <string name="profile_view_privacy_text">People can find me using public search</string>
+    <!-- Profile View -->
 </resources>
