--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -34,9 +34,9 @@
     <string name="profile_view_content_description">Your Picture</string>
 	<string name="profile_view_first_name">First Name</string>
 	<string name="profile_view_last_name">Last Name</string>
-    <string name="profile_view_preferred_nickname">Nickname</string>
-    <string name="profile_view_country">Country</string>
-    <string name="profile_view_city">City</string>
+    <string name="profile_view_preferred_nickname">Preferred Nickname</string>
+    <string name="profile_view_country">Country (optional)</string>
+    <string name="profile_view_city">City (optional)</string>
     <string name="profile_view_optional">OPTIONAL</string>
     <string name="profile_view_privacy_title">PRIVACY</string>
     <string name="profile_view_privacy_text">People can find me using public search</string>
