Implementing interaction picture and search.

--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="action_cancel">Cancel</string>
     <string name="pick_image_action_list_icon_description">Action Icon</string>
     <string name="interaction_summary_picture">Interaction Summary Picture</string>
+    <string name="action_search">Search Interaction</string>
 
 </resources>
