Interaction summary first commit

--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -46,5 +46,7 @@
     <string name="pick_image_action_list_icon_description">Action Icon</string>
     <string name="interaction_summary_picture">Interaction Summary Picture</string>
     <string name="action_search">Search Interaction</string>
+    <string name="string_dummy_interaction_text">dummy interaction text...</string>
+    <string name="dummy_date">31/12/9999</string>
 
 </resources>
