Add DateUtils and user friendly timestamp

--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -50,6 +50,6 @@
     <string name="interaction_summary_picture">Interaction Summary Picture</string>
     <string name="action_search">Search Interaction</string>
     <string name="string_dummy_interaction_text">dummy interaction text...</string>
-    <string name="dummy_date">31/12/9999</string>
+    <string name="dummy_date">94082374239147</string>
 
 </resources>
