--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -30,6 +30,11 @@
     <string name="title_activity_profile">Public Profile</string>
     <string name="action_new_interaction">New Event</string>
 
+    <!-- Interaction View -->
+    <string name="interaction_activity_last_action_button">Last Action</string>
+    <string name="interaction_activity_action_button">Action</string>
+    <!-- Interaction View -->
+
     <!-- Profile View -->
     <string name="profile_view_content_description">Your Picture</string>
     <string name="profile_view_first_name">First name</string>
@@ -40,10 +45,10 @@
     <string name="action_save_profile">Save</string>
     <string name="profile_view_location">LOCATION</string>
     <!-- Profile View -->
-    
-    <!-- Search  -->
-    <string name="search_hint">Search interactions...</string>
 
+
+    <!-- Search -->
+    <string name="search_hint">Search interactions...</string>
     <string name="action_select">Complete action using</string>
     <string name="action_cancel">Cancel</string>
     <string name="pick_image_action_list_icon_description">Action Icon</string>
