--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="action_profile">Profile</string>
     <string name="action_send_pk">Send your public key…</string>
     <string name="action_copy_pk">Copy your public key</string>
+    <string name="action_advanced">Advanced</string>
+    <string name="action_advanced_report">System Report</string>
     <string name="action_add_contact">Add contact</string>
     <string name="action_settings">Settings</string>
     <string name="dummy_text">dummy</string>
@@ -35,6 +37,7 @@
     <string name="interaction_activity_action_button">Action</string>
     <!-- Interaction View -->
 
+
     <!-- Profile View -->
     <string name="profile_view_content_description">Your Picture</string>
     <string name="profile_view_first_name">First name</string>
@@ -50,13 +53,14 @@
 
 
     <!-- Search -->
-    <string name="search_hint">Search interactions...</string>
+    <string name="search_hint">Search interactions</string>
     <string name="action_select">Complete action using</string>
     <string name="action_cancel">Cancel</string>
     <string name="pick_image_action_list_icon_description">Action Icon</string>
     <string name="interaction_summary_picture">Interaction Summary Picture</string>
     <string name="action_search">Search Interaction</string>
-    <string name="string_dummy_interaction_text">dummy interaction text...</string>
+    <string name="string_dummy_interaction_text">dummy interaction text</string>
     <string name="dummy_date">94082374239147</string>
+    <string name="title_activity_system_report">System Report</string>
 
 </resources>
