--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="title_chat_list">SneerChat</string>
     <string name="title_chat_detail">Chat Detail</string>
     <string name="title_interaction_list">Recent Interactions</string>
-    <string name="title_interaction">Interaction</string>
+    <string name="title_conversation">Conversation</string>
     <string name="title_activity_profile">Public Profile</string>
     <string name="action_new_interaction">New Event</string>
 
