--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -41,8 +41,7 @@
     <!-- Contact View -->
     <string name="contact_view_nickname">Nickname</string>
     <string name="contact_view_public_key">Public key</string>
-    <string name="profile_view_section_contact">CONTACT SECTION</string>
-    <string name="profile_view_section_profile">PROFILE SECTION</string>
+    <string name="profile_view_section_profile">PROFILE</string>
     <!-- Contact View -->
     
     <!-- Profile View -->
