--- a/android.main/res/values/strings.xml
+++ b/android.main/res/values/strings.xml
@@ -68,6 +68,8 @@
     <string name="string_dummy_conversation_text">dummy conversation text</string>
     <string name="dummy_date">94082374239147</string>
     <string name="title_activity_system_report">System Report</string>
+    
+    <!-- This appears on the menu for url viewing -->
     <string name="title_activity_contact">Sneer Contact</string>
 
 </resources>
