--- a/android/android.main/res/values/strings.xml
+++ b/android/android.main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="conversation_summary_picture">Conversation Summary Picture</string>
     <string name="action_search">Search Conversation</string>
     <string name="string_dummy_conversation_text">dummy conversation text</string>
+    <string name="string_dummy_conversation_unread_messages">4</string>
     <string name="dummy_date">94082374239147</string>
     <string name="title_activity_system_report">System Report</string>
     
