--- a/android/android.main/res/values/strings.xml
+++ b/android/android.main/res/values/strings.xml
@@ -2,51 +2,35 @@
 <resources>
 
     <string name="app_name">Sneer</string>
-    <string name="title_activity_main">Sneer</string>
-    <string name="title_activity_contact_add">Add Contact</string>
-    <string name="action_profile">Profile</string>
-    <string name="action_send_pk">Send your public key…</string>
-    <string name="action_copy_pk">Copy your public key</string>
     <string name="action_advanced">Advanced</string>
-    <string name="action_search_for_apps">Search for Apps</string>    
+    <string name="action_search_for_apps">Search for Apps</string>
     <string name="action_advanced_report">System Report</string>
-    <string name="action_add_contact">Add contact</string>
     <string name="action_settings">Settings</string>
-    <string name="dummy_text">dummy</string>
     <string name="send_contact">Send</string>
     <string name="chat_contact">Chat</string>
     <string name="edit_contact">Edit</string>
     <string name="remove_contact">Remove</string>
     <string name="nickname">Nickname</string>
     <string name="comments">Comments</string>
-    <string name="send_contact_dialog">Sending contact</string>
-    <string name="action_contacts">Contacts</string>
-    <string name="action_group">Chat Group</string>
     <string name="button_send">Send</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_dummy">DummyActivity</string>
-    <string name="title_activity_chat">SneerChat</string>
-    <string name="title_chat_list">SneerChat</string>
-    <string name="title_chat_detail">Chat Detail</string>
-    <string name="title_conversation_list">Recent Conversation</string>
     <string name="title_conversation">Conversation</string>
     <string name="title_activity_profile">Public Profile</string>
     <string name="action_new_conversation">New Message</string>
 
-    <!-- Conversation View -->
-    <string name="conversation_activity_last_action_button">Last Action</string>
+    <!-- ConversationActivity -->
     <string name="conversation_activity_action_button">Action</string>
-    <!-- Conversation View -->
+    <!-- ConversationActivity -->
 
 
-    <!-- Contact View -->
+    <!-- ContactActivity -->
     <string name="contact_view_nickname">Nickname</string>
     <string name="contact_view_public_key">Public key</string>
     <string name="contact_view_share_public_key">Share Public key</string>
     <string name="profile_view_section_profile">PROFILE</string>
-    <!-- Contact View -->
-    
-    <!-- Profile View -->
+    <!-- ContactActivity -->
+
+
+    <!-- ProfileActivity -->
     <string name="profile_view_content_description">Your Picture</string>
     <string name="profile_view_first_name">First name</string>
     <string name="profile_view_last_name">Last name</string>
@@ -56,23 +40,16 @@
     <string name="profile_view_city">City (optional)</string>
     <string name="profile_error_size_name">Name too short</string>
     <string name="action_save_profile">Save</string>
-    <string name="profile_view_share_public_key">Share my Public key</string>
     <string name="profile_view_location">LOCATION</string>
-    <!-- Profile View -->
+    <!-- ProfileActivity -->
 
-
-    <!-- Search -->
     <string name="search_hint">Search conversation</string>
-    <string name="action_select">Complete action using</string>
+    <string name="action_search">Search Conversation</string>
     <string name="action_cancel">Cancel</string>
     <string name="pick_image_action_list_icon_description">Action Icon</string>
     <string name="conversation_summary_picture">Conversation Summary Picture</string>
-    <string name="action_search">Search Conversation</string>
-    <string name="string_dummy_conversation_text">dummy conversation text</string>
-    <string name="string_dummy_conversation_unread_messages">4</string>
-    <string name="dummy_date">94082374239147</string>
     <string name="title_activity_system_report">System Report</string>
-    
+
     <!-- This appears on the menu for url viewing -->
     <string name="title_activity_contact">Sneer Contact</string>
     <string name="action_share">Share Public Key</string>
