--- a/android/apps/voicemessage/res/values/strings.xml
+++ b/android/apps/voicemessage/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">Voice Message</string>
+    <string name="title_activity_voice_message_open">VoiceMessageOpenActivity</string>
 
 </resources>
