Receive pictures functionality.

--- a/android/apps/sendpics/res/values/strings.xml
+++ b/android/apps/sendpics/res/values/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+
     <string name="app_name">Send Pics</string>
-	<string name="image_view_content_description">Your Picture</string>
-	
+    <string name="image_view_content_description">Your Picture</string>
+    <string name="title_activity_receive_pics">ReceivePicsActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
