sendfiles: add pick files from filesystem (wip)

--- a/android/apps/sendfiles/res/values/strings.xml
+++ b/android/apps/sendfiles/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string name="app_name">sendfiles</string>
-    <string name="title_activity_view_send_files">ViewSendFilesActivity</string>
+
+    <string name="title_activity_send_files">Send File</string>
+    <string name="title_activity_view_send_files">View File</string>
 
 </resources>
