--- a/android/apps/sendpics/res/values/strings.xml
+++ b/android/apps/sendpics/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Send Pics</string>
     <string name="image_view_content_description">Your Picture</string>
-    <string name="title_activity_receive_pics">ReceivePicsActivity</string>
+    <string name="title_activity_receive_pics">Receive Pics</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
