--- a/android/apps/sendvideo/res/values/strings.xml
+++ b/android/apps/sendvideo/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">sendvideo</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_compose_video_message">ComposeVideoMessageActivity</string>
+    <string name="title_activity_view_video_message">ViewVideoMessageActivity</string>
 
 </resources>
