Main: Move share button from ProfileActivity to MainActivity

--- a/android/android.main/res/values/strings.xml
+++ b/android/android.main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <!-- This appears on the menu for url viewing -->
     <string name="title_activity_contact">Sneer Contact</string>
     <string name="action_share">Share Public Key</string>
+    <string name="action_add_contact">Add Contact</string>
 
 </resources>
