WIP: new add contacts mechanics

--- a/android/android.main/src/main/res/values/strings.xml
+++ b/android/android.main/src/main/res/values/strings.xml
@@ -30,6 +30,12 @@
     <!-- ContactActivity -->
 
 
+    <!-- ContactActivity -->
+    <string name="add_contact_not_connected_yet">Not connected yet</string>
+    <string name="add_contact_send_invite">Send Invite</string>
+    <!-- ContactActivity -->
+
+
     <!-- ProfileActivity -->
     <string name="profile_view_content_description">Your Picture</string>
     <string name="profile_view_first_name">First name</string>
@@ -54,5 +60,4 @@
     <string name="title_activity_contact">Sneer Contact</string>
     <string name="action_share">Share Public Key</string>
     <string name="action_add_contact">Add Sovereign Contact</string>
-
 </resources>
