--- a/android/android.main/src/main/res/values/strings.xml
+++ b/android/android.main/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="title_activity_profile">Public Profile</string>
     <string name="action_new_conversation">New Message</string>
 
+    <string name="empty_contact_list">Tap the \"Add contact\" icon at the top of your screen to invite your friends to use Sneer and start a conversation with them.</string>
+
     <!-- ConversationActivity -->
     <string name="conversation_activity_action_button">Action</string>
     <!-- ConversationActivity -->
