Include name in waiting message

--- a/android/android.main/src/main/res/values/strings.xml
+++ b/android/android.main/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <!-- ConversationActivity -->
     <string name="conversation_activity_action_button">Action</string>
-    <string name="conversation_activity_waiting">Waiting for user to accept your invite.</string>
+    <string name="conversation_activity_waiting">Waiting for %s to accept your invite.</string>
     <!-- ConversationActivity -->
 
 
